# SDLGame

./: CMakeLists.txt  README.md
assets/: map
cmake/: FindSDL2.cmake
img/player/: knight.xcf
src/: Clock.cpp  Clock.hpp  Collision.cpp  Collision.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  Vector2.cpp  Vector2.hpp  Vector2int.cpp  Vector2int.hpp  main.cpp
src/ECS/: Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Components.hpp  ECS.cpp  ECS.hpp  Entity.cpp  Entity.hpp  KeyboardController.cpp  KeyboardController.hpp  Manager.cpp  Manager.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Tile.cpp  Tile.hpp  Transform.cpp  Transform.hpp
